<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoDo</string>
    <string name="action_settings">Settings</string>
    <string name="title_contexts">Contexts</string>
    <string name="title_activity_task">Task</string>
    <string name="title_activity_settings">Settings</string>
    <string name="task_name_hint">Task name</string>
    <string name="instance_notes_label">One time notes</string>
    <string name="pref_filtering_header">Filtering</string>
    <string name="pref_show_blocked_by_task_title">Show dependent tasks</string>
    <string name="pref_show_blocked_by_task_on">Show tasks that are blocked by an incomplete task</string>
    <string name="pref_show_blocked_by_task_off">Hide tasks that are blocked by an incomplete task</string>
    <string name="pref_show_blocked_by_context_title">Show inactive tasks</string>
    <string name="pref_show_blocked_by_context_on">Show tasks that require an inactive context</string>
    <string name="pref_show_blocked_by_context_off">Hide tasks that require an inactive context</string>
    <string name="pref_show_done_title">Show completed tasks</string>
    <string name="pref_show_done_on">Show tasks that are complete</string>
    <string name="pref_show_done_off">Show only incomplete tasks</string>
    <string name="pref_show_future_title">Show future tasks</string>
    <string name="pref_show_future_on">Show tasks with start or plan dates in the future</string>
    <string name="pref_show_future_off">Show only tasks that have begun</string>
    <string name="start_date_label">Start</string>
    <string name="plan_date_label">Plan</string>
    <string name="due_date_label">Due</string>
    <string name="new_task">New task</string>
    <string name="notification_label">Active</string>
    <string name="due_notification_label">Due</string>
    <string name="title_activity_tasker_plugin_edit">GoDo Contexts</string>
    <string name="contexts_to_activate">Contexts to activate</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="contexts_to_deactivate">Contexts to deactivate</string>
    <string name="max_notification_level">Maximum notification level</string>
    <string name="delete">Delete</string>
    <string name="context_description">Context description</string>
    <string name="context_name">Context name</string>
    <string name="new_context">New context</string>
    <string name="new_repetition">New repetition rule</string>
    <string name="title_activity_task_repetition_rule">Repetition Rule</string>
    <string name="repetition_to">Set field</string>
    <string name="repetition_from">Starting at</string>
    <string name="repetition_direction">And moving</string>
    <string name="repetition_number">By number</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="pref_default_notification_title">Default active notification level</string>
    <string name="pref_default_due_notification_title">Default due notification level</string>
    <string name="new_task_voice">New task from voice</string>
    <string name="pick_from_list">Pick from list</string>
    <string name="new_from_template">New from template</string>
    <string name="new_prereq">Create prerequisite</string>
    <string name="new_next_step">Create next step</string>
    <string name="mark_complete">Mark complete</string>
    <string name="search_hint">Search tasks</string>
    <string name="menu_search">Search</string>
    <string name="start_after_due">Start date is after due date</string>
    <string name="start_after_plan">Start date is after plan date</string>
    <string name="plan_after_due">Plan date is after due date</string>
    <string name="title_activity_repetition_rules_list">Repetition Rules</string>
    <string name="notes_hint">Notes</string>
    <string name="repetitions_header">Repetitions</string>
    <string name="view_history_button">View History</string>
    <string name="dates_header">Dates</string>
    <string name="notifications_header">Notifications</string>
    <string name="history_activity_label">Task History</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="next_steps">Next Steps</string>
    <string name="relationships">Relationships</string>
    <string name="drawer_opened">Opened drawer</string>
    <string name="drawer_closed">Closed drawer</string>
    <string name="repeats_automatically">Repeats automatically</string>
    <string name="repeats_manually">Repeats manually</string>
    <string name="no_repetition">Does not repeat</string>
    <string name="no_dependencies">No dependencies</string>
    <string name="more_templates">More templates</string>
    <string name="no_time">No time</string>
    <string name="tasker_header">Tasker</string>
    <string name="tasker_label">Label</string>

</resources>