<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/warnings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/startAfterDue"
            style="@style/Warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_after_due"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/startAfterPlan"
            style="@style/Warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_after_plan"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/planAfterDue"
            style="@style/Warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plan_after_due"
            android:visibility="gone"
            tools:visibility="visible"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/warnings"
        android:layout_alignParentTop="true"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:columnCount="2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <RelativeLayout android:layout_columnSpan="2">

                <CheckBox
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <EditText
                    android:id="@+id/task_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_toRightOf="@id/check"
                    android:hint="@string/task_name_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:singleLine="false"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

            </RelativeLayout>

            <TextView android:text="@string/task_notes_label"/>

            <EditText
                android:id="@+id/task_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:inputType="textMultiLine|textCapSentences"/>


            <TextView android:text="@string/instance_notes_label"/>

            <EditText
                android:id="@+id/instance_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:inputType="textMultiLine|textCapSentences"/>

            <TextView android:text="@string/notification_label"/>

            <Spinner
                android:id="@+id/notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:entries="@array/notification_levels"/>

            <TextView android:text="@string/due_notification_label"/>

            <Spinner
                android:id="@+id/due_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:entries="@array/notification_levels"/>

            <TextView android:text="@string/start_date_label"/>

            <fake.domain.adamlopresto.godo.DateTimePicker
                android:id="@+id/start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"/>

            <TextView android:text="@string/plan_date_label"/>

            <fake.domain.adamlopresto.godo.DateTimePicker
                android:id="@+id/plan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"/>

            <TextView android:text="@string/due_date_label"/>

            <fake.domain.adamlopresto.godo.DateTimePicker
                android:id="@+id/due"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"/>

            <Button
                android:id="@+id/pick_shortcut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="Pick shortcut"/>

            <Button
                android:id="@+id/run_shortcut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:text="Run shortcut"/>

        </GridLayout>
    </ScrollView>

</RelativeLayout>
