<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <View
        style="@style/divider"
        />
    <TextView
        style="@style/textButton"
        android:id="@+id/create_prereq"
        android:text="@string/new_prereq"
        />
    <View
        style="@style/divider"
        />
    <TextView
        style="@style/textButton"
        android:id="@+id/pick_prereq_from_list"
        android:text="@string/pick_from_list"
        />
    <View
        style="@style/divider"
        />
    <TextView
        android:id="@+id/next_steps_label"
        android:background="@color/appMain"
        android:drawableBottom="?android:attr/windowContentOverlay"
        android:textColor="#FFF"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/next_steps"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="@drawable/title_bar_shadow"
        />

</LinearLayout>