<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:theme="@style/WidgetTheme"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLargeInverse" />

        <ImageView
            android:id="@+id/action_new_task_voice"
            android:layout_width="33sp"
            android:layout_height="match_parent"
            android:contentDescription="@string/new_task_voice"
            android:scaleType="centerInside"
            android:src="@drawable/ic_microphone" />

        <ImageView
            android:id="@+id/action_new_task"
            android:layout_width="33sp"
            android:layout_height="match_parent"
            android:contentDescription="@string/new_task"
            android:scaleType="centerInside"
            android:src="@drawable/content_new" />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

</LinearLayout>
